--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,32 +1,56 @@
 {
-  "name": "front",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "mazda-driver-identity",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@ethersproject/hash": "^5.7.0",
+    "@gelatonetwork/relay-sdk": "5.5.2",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
-    "@web3auth/modal": "^7.1.1",
+    "@noble/curves": "^1.1.0",
+    "@safe-global/safe-core-sdk-types": "^2.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.34",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
+    "@walletconnect/sign-client": "^2.10.4",
+    "@web3auth/modal": "^7.0.5",
+    "assert": "^2.0.0",
+    "axios": "^1.4.0",
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.0",
+    "ethers": "^5.7.2",
+    "ethers6": "npm:ethers@^6.7.0",
+    "framer-motion": "^10.16.5",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.19.0",
-    "recoil": "^0.7.7"
+    "react-dropdown-now": "^6.0.1",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.18.0",
+    "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
+    "recoil": "^0.7.7",
+    "rxjs": "~7.5.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "typescript": "^4.9.5",
+    "url": "^0.11.1",
+    "uuid": "^9.0.1",
+    "web-vitals": "^2.1.4",
+    "zkatana-gelato-account-abstraction-kit": "1.3.2",
+    "zkatana-gelato-protocol-kit": "^1.3.1",
+    "zkatana-gelato-relay-kit": "^1.3.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.53.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.0",
-    "vite-plugin-pwa": "^0.17.0"
+    "@types/uuid": "^9.0.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -52,5 +76,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
