--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.4.0",
     "browserify-zlib": "^0.2.0",
     "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.3.1",
     "ethers": "^5.7.2",
     "ethers6": "npm:ethers@^6.7.0",
     "framer-motion": "^10.16.5",
